[workspace]
members = ["kic-lib", "lxi"]
resolver = "2"

[workspace.package]
authors = ["Keithley Instruments, LLC"]
edition = "2021"
repository = "https://github.com/tektronix/tsp-toolkit-kic-lib"

[workspace.dependencies]
thiserror = "1.0"
byteorder = "1.5"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
undocumented_unsafe_blocks = "deny"
arithmetic_side_effects = "deny"

[workspace.lints.rustdoc]
all = "warn"
missing_doc_code_examples = "warn"
