[package]
name = "tsp-toolkit-kic-lib"
description = "A library specifically enabling communication to Tektronix and Keithley, TSP-enabled instruments"
version = "0.21.0"
authors = ["Tektronix, Inc."]
edition = "2021"
repository = "https://github.com/tektronix/tsp-toolkit-kic-lib"

[dependencies]
bytes = "1"
phf = { version = "0.11", features = ["macros"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", features = ["async-await"] }
chrono = "0.4"
minidom = "0.15"
reqwest = { version = "0.12", features = ["blocking"] }
visa-rs = { version = "0.6.2", optional = true }
indicatif = "0.17.11"
roxmltree = { version = "0.20.0", default-features = false, features = ["std"] }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }

[features]
visa = ["dep:visa-rs"]

[dev-dependencies]
anyhow = "1"
bytes = "1"
colored = "2"
mockall = { version = "0.12" }

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
undocumented_unsafe_blocks = "deny"
arithmetic_side_effects = "deny"

[lints.rustdoc]
all = "warn"
missing_doc_code_examples = "warn"

