[package]
name = "tsp-toolkit-kic-lib"
description = "A library specifically enabling communication to the Keithley product-line of instruments"
version = "0.15.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
chrono = "0.4"
minidom = "0.15"
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.12", features = ["blocking"] }
rpassword = "7"
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tmc = { git = "https://github.com/esarver/rusb-usbtmc" }
tracing = { version = "0.1", features = ["async-await"] }

[dev-dependencies]
anyhow = "1"
bytes = "1"
colored = "2"
mockall = { version = "0.12", features = ["nightly"] }
